pgAdmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: axion

spec:
  replicas: 2

  selector:
    matchLabels:
      app: pgadmin

  template:
    metadata:
      labels:
        app: pgadmin

    spec:
      serviceAccountName: pgadmin-sa
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "250Mi"
            limits:
              cpu: "1"
              memory: "600Mi"

          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true

      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: pgadmin-kv
