pgAdmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: axion

spec:
  type: ClusterIP

  selector:
    app: pgadmin

  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30081
