ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ingress
  namespace: axion
spec:
  ingressClassName: nginx
  rules:
    - host: axion.kds14.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axion-service
                port:
                  number: 80
